调整金桥物流

--- a/tdc_4.html
+++ b/tdc_4.html
@@ -49,60 +49,59 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                            <div class="col2-60b-left" style=""> <!--左边60%-->
-                                <div class="lin2-25b-top"> <!--左边上25%-->
-                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
-                                        <a href="images/tdc4/i4.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc4/i4.jpg" class=""
-                                                style="width:100%; height:117px;"></a>
-                                    </div>
-                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
-                                        <a href="images/tdc4/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc4/i2.jpg" class=""
-                                                style="width:100%; height: 117px;"></a>
-                                    </div>
-                                    <div class="" style=" width: 33.33%; height: 100%; float: left; overflow: hidden;">
-                                        <a href="images/tdc4/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc4/i3.jpg" class=""
-                                                style="width:100%; height: 117px; float: right;"></a>
-                                    </div>
-                                </div>
-                                <div class="lin2-75b-foot"> <!--左边下75%-->
-                                    <a href="images/tdc4/i1.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tdc4/i1.jpg" class=""
-                                            style="width:100%; height: 350px; "></a>
-                                </div>
-                            </div>
+                <div class="col-1-4-top" style="padding: 0;">
+                      <div class="width-1-5 i-col"> <!--左上3列-->
+                          <a href="images/tdc4/i4.jpg" data-lightbox="lightbox"><img
+                                  src="./images/tdc4/i4.jpg" class="img-fullh"
+                                  style=""></a>
+                      </div>
+                      <div class="width-1-5 i-col"> <!--左上3列-->
+                          <a href="images/tdc4/i2.jpg" data-lightbox="lightbox"><img
+                                  src="./images/tdc4/i2.jpg" class="img-fullh"
+                                  style=""></a>
+                      </div>
+                      <div class="width-1-5 i-col">
+                          <a href="images/tdc4/i3.jpg" data-lightbox="lightbox"><img
+                                  src="./images/tdc4/i3.jpg" class="img-fullh"
+                                  style=""></a>
+                      </div>
 
-                            <div class="col2-40b-right" style=""> <!--右边40%-->
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;width: 50%;">
-                                        <a href="images/tdc4/i5.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc4/i5.jpg" class=""
-                                                style=" height: 117px;padding: 0 5px 0 0; "></a>
-                                    </div>
-                                    <div style="float: left;width: 50%;">
-                                        <a href="images/tdc4/i6.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc4/i6.jpg" class=""
-                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
-                                    </div>
-                                </div>
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;">
-                                        <a href="images/tdc4/i8.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc4/i8.jpg" class=""
-                                                style="width: 379px; height: 171px;padding: 0 5px 0 0;"></a>
-                                    </div>
-                                </div>
+                          <div class="width-1-5 i-col">
+                              <a href="images/tdc4/i5.jpg" data-lightbox="lightbox"><img
+                                      src="./images/tdc4/i5.jpg" class="img-fullh"
+                                      style=""></a>
+                          </div>
+                          <div class="width-1-5 i-col">
+                              <a href="images/tdc4/i6.jpg" data-lightbox="lightbox"><img
+                                      src="./images/tdc4/i6.jpg" class="img-fullh"
+                                      style=""></a>
+                          </div>
+                </div>
+                <div class="col-3-4-bottom">
+                  <div class="width-3-5  i-col" style=""> <!--左边60%-->
+                          <a href="images/tdc4/i1.jpg" data-lightbox="lightbox"><img
+                                  src="./images/tdc4/i1.jpg" class="img-fullh"
+                                  style=""></a>
+                  </div>
 
-                                <div style="width: 100%">  <!--右第一行-->
-                                    <a href="images/tdc4/i7.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tdc4/i7.jpg" class=""
-                                            style=" height: 161px;"></a>
-                                </div>
+                  <div class="width-2-5  i-col" style=""> <!--右边40%-->
 
-                            </div>
-                        </div>
+                      <div class="col-1-2-top">  <!--右第一行-->
+                              <a href="images/tdc4/i8.jpg" data-lightbox="lightbox"><img
+                                      src="./images/tdc4/i8.jpg" class=""
+                                      style=""></a>
+                      </div>
+
+                      <div style="col-1-2-bottom">  <!--右第一行-->
+                          <a href="images/tdc4/i7.jpg" data-lightbox="lightbox"><img
+                                  src="./images/tdc4/i7.jpg" class=""
+                                  style=""></a>
+                      </div>
+
+                  </div>
+
+                </div>
+              </div>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/tdc4/i7.jpg">	</div>
@@ -137,7 +136,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              
+
               <source src="audios/tdc4.ogg" type="audio/ogg" />
             </audio>
           </div>
