--- a/tdc_5.html
+++ b/tdc_5.html
@@ -54,41 +54,41 @@
                                         style="height: 468px"></a>
                             </div>
 
-                            <div class="col2-40b-right" style=""> <!--右边40%-->
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;width: 50%;">
+                            <div class="col2-40b-right" style="padding: 0 0 0 8px;"> <!--右边40%-->
+                                <div class="height-1-3" style="padding: 0 0 8px 0">  <!--右第一行-->
+                                    <div class="row-1-2-left">
                                         <a href="images/tdc5/i4.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc5/i4.jpg" class=""
-                                                style="height: 156px; padding: 0 5px 0 0; "></a>
+                                                src="./images/tdc5/i4.jpg" class="img-fullh"
+                                                style=" "></a>
                                     </div>
-                                    <div style="float: left;width: 50%;">
+                                    <div class="row-1-2-right">
                                         <a href="images/tdc5/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc5/i3.jpg" class=""
-                                                style="height: 156px;  padding: 0 0 0 5px;"></a>
+                                                src="./images/tdc5/i3.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
                                 </div>
-                                <div class="col2-40b-right-2lin">  <!--右第二行-->
-                                    <div style="float: left;width: 50%;">
+                                <div class="height-1-3" style="padding: 8px 0">  <!--右第二行-->
+                                    <div class="row-1-2-left">
                                         <a href="images/tdc5/i6.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc5/i6.jpg" class=""
-                                                style=" height: 156px;padding: 0 5px 0 0; "></a>
+                                                src="./images/tdc5/i6.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
-                                    <div style="float: left;width: 50%;">
+                                    <div class="row-1-2-right">
                                         <a href="images/tdc5/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc5/i2.jpg" class=""
-                                                style=" height: 156px;padding: 0 0 0 5px;"></a>
+                                                src="./images/tdc5/i2.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
                                 </div>
-                                <div class="col2-40b-right-1lin">  <!--右第3行-->
-                                    <div style="float: left;width: 50%;">
+                                <div class="height-1-3" style="padding: 8px 0 0 0;">  <!--右第3行-->
+                                    <div class="row-1-2-left">
                                         <a href="images/tdc5/i7.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc5/i7.jpg" class=""
-                                                style=" height: 156px;padding: 0 5px 0 0; "></a>
+                                                src="./images/tdc5/i7.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
-                                    <div style="float: left;width: 50%;">
+                                    <div class="row-1-2-right">
                                         <a href="images/tdc5/i1.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tdc5/i1.jpg" class=""
-                                                style=" height: 156px;padding: 0 0 0 5px;"></a>
+                                                src="./images/tdc5/i1.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
                                 </div>
                             </div>
