--- a/tdc_7.html
+++ b/tdc_7.html
@@ -48,10 +48,16 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                <a href="images/tdc7/gimg_03.png" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_03.png"></a>
-                <div style="margin-top: 1.5%;">
-                  <a href="images/tdc7/gimg_06.png" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_06.png" class="gimg3"></a>
-                  <a href="images/tdc7/gimg_08.png" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_08.png" class="gimg4"></a>
+                <div class="col-1-2-top">
+                <a href="images/tdc7/i1.jpg" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_03.png"></a>
+                </div>
+                <div class="col-1-2-bottom">
+                  <div class="row-1-2-left">
+                    <a href="images/tdc7/i2.jpg" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_06.png" class=""></a>
+                  </div>
+                  <div class="row-1-2-right">
+                    <a href="images/tdc7/i3.jpg" data-lightbox="lightbox" ><img src="./images/tdc7/gimg_08.png" class=""></a>
+                  </div>
                 </div>
 
               </div>
