--- a/tdc_4.html
+++ b/tdc_4.html
@@ -2,159 +2,160 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>金桥物流基地</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>金桥物流基地</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tdc_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/tdc_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>金桥物流基地</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>金桥物流基地</h3>
+                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">
                   位于大连市开发区钢铁路9号，包括1.2万平方米的金桥汽车配件物流园区、首创1万平方米的多功能移动推拉库，为鞍钢蒂森克虏伯钢厂、东风日产等企业提供优质的物流服务，打造与国际接轨的专业化第三方物流品牌。
                 </span>
-              </p>
+                        </p>
 
-            </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="col-1-4-top" style="padding: 0;">
-                      <div class="width-1-5 i-col"> <!--左上3列-->
-                          <a href="images/tdc4/i4.jpg" data-lightbox="lightbox"><img
-                                  src="./images/tdc4/i4.jpg" class="img-fullh"
-                                  style=""></a>
-                      </div>
-                      <div class="width-1-5 i-col"> <!--左上3列-->
-                          <a href="images/tdc4/i2.jpg" data-lightbox="lightbox"><img
-                                  src="./images/tdc4/i2.jpg" class="img-fullh"
-                                  style=""></a>
-                      </div>
-                      <div class="width-1-5 i-col">
-                          <a href="images/tdc4/i3.jpg" data-lightbox="lightbox"><img
-                                  src="./images/tdc4/i3.jpg" class="img-fullh"
-                                  style=""></a>
-                      </div>
-
-                          <div class="width-1-5 i-col">
-                              <a href="images/tdc4/i5.jpg" data-lightbox="lightbox"><img
-                                      src="./images/tdc4/i5.jpg" class="img-fullh"
-                                      style=""></a>
-                          </div>
-                          <div class="width-1-5 i-col">
-                              <a href="images/tdc4/i6.jpg" data-lightbox="lightbox"><img
-                                      src="./images/tdc4/i6.jpg" class="img-fullh"
-                                      style=""></a>
-                          </div>
-                </div>
-                <div class="col-3-4-bottom">
-                  <div class="width-3-5  i-col" style=""> <!--左边60%-->
-                          <a href="images/tdc4/i1.jpg" data-lightbox="lightbox"><img
-                                  src="./images/tdc4/i1.jpg" class="img-fullh"
-                                  style=""></a>
-                  </div>
-
-                  <div class="width-2-5  i-col" style=""> <!--右边40%-->
-
-                      <div class="col-1-2-top">  <!--右第一行-->
-                              <a href="images/tdc4/i8.jpg" data-lightbox="lightbox"><img
-                                      src="./images/tdc4/i8.jpg" class=""
-                                      style=""></a>
-                      </div>
-
-                      <div style="col-1-2-bottom">  <!--右第一行-->
-                          <a href="images/tdc4/i7.jpg" data-lightbox="lightbox"><img
-                                  src="./images/tdc4/i7.jpg" class=""
-                                  style=""></a>
-                      </div>
-
-                  </div>
+                    </div>
 
                 </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tdc4/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i1.jpg">	</div>
-                </div>
-              </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <div class="col-1-4-top" style="padding: 0;"> <!--四分之一高度-->
+                                <div class="width-1-5 i-col"> <!--左上3列--> <!--五分之一宽-->
+                                    <a href="images/tdc4/i4.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i4.jpg" class="img-fullh"
+                                            style=""></a>
+                                </div>
+                                <div class="width-1-5 i-col"> <!--左上3列-->
+                                    <a href="images/tdc4/i2.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i2.jpg" class="img-fullh"
+                                            style=""></a>
+                                </div>
+                                <div class="width-1-5 i-col">
+                                    <a href="images/tdc4/i3.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i3.jpg" class="img-fullh"
+                                            style=""></a>
+                                </div>
+                                <div class="width-1-5 i-col">
+                                    <a href="images/tdc4/i5.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i5.jpg" class="img-fullh"
+                                            style=""></a>
+                                </div>
+                                <div class="width-1-5 i-col">
+                                    <a href="images/tdc4/i6.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i6.jpg" class="img-fullh"
+                                            style=""></a>
+                                </div>
+                            </div>
+                            <div class="col-3-4-bottom">
+                                <div class="width-3-5  i-col" style=""> <!--左边60%-->
+                                    <a href="images/tdc4/i1.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i1.jpg" class="img-fullh"
+                                            style=""></a>
+                                </div>
 
+                                <div class="width-2-5  i-col" style=""> <!--右边40%-->
+
+                                    <div class="col-1-2-top">  <!--右第一行-->
+                                        <a href="images/tdc4/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i8.jpg" class=""
+                                                style=""></a>
+                                    </div>
+
+                                    <div class="col-1-2-bottom">  <!--右第一行-->
+                                        <a href="images/tdc4/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i7.jpg" class=""
+                                                style=""></a>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tdc4/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i1.jpg"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
 
-              <source src="audios/tdc4.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+                        <source src="audios/tdc4.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Modal -->
 
-    </div>
-    <script src="scripts/jquery-1.9.1.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-    <script src="scripts/swiper.jquery.min.js"></script>
-    <script src="scripts/swiper.animate.min.js"></script>
-    <script src="scripts/video.js"></script>
-    <script src="scripts/lightbox.min.js"></script>
-    <script src="scripts/typing-animate.js"></script>
-    <script src="scripts/app.js"></script>
-  </body>
-  </html>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
+</body>
+</html>
