--- a/1_profile.html
+++ b/1_profile.html
@@ -2,122 +2,144 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>集团简介-铁越物流</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>集团简介-铁越物流</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
-  <script>
-    window.HELP_IMPROVE_VIDEOJS = false;
-  </script>
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
+    <script>
+        window.HELP_IMPROVE_VIDEOJS = false;
+    </script>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/timg_03.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/timg_03.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main" style="">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>集团简介</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-            </div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>集团简介</h3>
+                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                    </div>
 
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">大连铁越集团成立于2005年，是沈阳铁路局下属的跨行业、多领域、区域性集团公司。集团注册资金1.3亿元，资产总额60多亿元，下属17个分子公司，是中国铁路第一家A股上市公司“铁龙物流”的第二大股东。集团通过了国家ISO9001-2000质量体系认证, 是中国物流与采购联合会“AAAA级”综合型物流企业、中物联冷链副理事长单位、大连市物流协会副会长单位、辽宁省“现代物流示范企业”、辽宁省“文明单位”。
                 </span>
-              </p>
-              <a href="images/profile/i1.jpg" data-lightbox="lightbox" ><img src="./images/gkimg_21.png" class="wzimg"> </a>
+                        </p>
+                        <a href="images/profile/i1.jpg" data-lightbox="lightbox"><img src="./images/gkimg_21.png"
+                                                                                      class="wzimg"> </a>
 
+                    </div>
+
+                </div>
+
+                <div class="col-md-9 rightpart">
+
+                    <div id="image_list" class="div7">
+                        <div class="titlepart" style="width:30%;margin-left:1%">
+                            <h3>集团资质</h3>
+                            <img src="./images/tiao_03.png">
+                        </div>
+                        <div>
+                            <a href="images/profile/c1.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/profile/c1_s.png" class="imgdd"> </a>
+                            <a href="images/profile/c3.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/c3_s.png" class="imgdd"> </a>
+                            <a href="images/profile/c4.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/c4_s.png" class="imgdd"> </a>
+                            <a href="images/profile/c2.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/c2_s.png" class="imgdd"> </a>
+                        </div>
+                        <div style="width:88%;height:1px;background:#fff;margin:30px 0 30px 9px;"></div>
+                        <div class="titlepart" style="width:45%;margin-left:0%;position: relative;height:30px">
+                            <h3>集团荣誉</h3>
+                            <img src="./images/tiao_03.png">
+                        </div>
+                        <div>
+                            <a href="images/profile/o1.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o1_s.png" class="imgdd1"> </a>
+
+                            <a href="images/profile/o2.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o2_s.png" class="imgdd1"> </a>
+
+                            <a href="images/profile/o3.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o3_s.png" class="imgdd1"> </a>
+
+                            <a href="images/profile/o7.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o7_s.png" class="imgdd1"> </a>
+
+                            <a href="images/profile/o4.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o4_s.png" class="imgdd1"> </a>
+
+                            <a href="images/profile/o5.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o5_s.png" class="imgdd1"> </a>
+
+                         <a href="images/profile/o6.jpg" data-lightbox="lightbox"><img
+                                    src="./images/profile/o6_s.png" class="imgdd1"> </a>
+                        </div>
+                    </div>
+                    <div class="div3">
+                        <a href="profile_1.html"><img src="./images/gkimg_06.png" class="div3img"></a>
+                        <a href="profile_2.html"><img src="./images/gkimg_17.png" class="div3img"></a>
+                    </div>
+                </div>
             </div>
-
-          </div>
-
-          <div class="col-md-9 rightpart" >
-
-            <div id="image_list" class="div7">
-              <div class="titlepart" style="width:30%;margin-left:1%">
-                <h3>集团资质</h3>
-                <img src="./images/tiao_03.png" >
-              </div>
-              <div >
-                <a href="images/profile/c1.jpg" data-lightbox="lightbox" > <img src="./images/profile/c1_s.png" class="imgdd"> </a>
-                <a href="images/profile/c3.jpg" data-lightbox="lightbox" ><img src="./images/profile/c3_s.png" class="imgdd"> </a>
-                <a href="images/profile/c4.jpg" data-lightbox="lightbox" ><img src="./images/profile/c4_s.png" class="imgdd"> </a>
-                <a href="images/profile/c2.jpg" data-lightbox="lightbox" ><img src="./images/profile/c2_s.png" class="imgdd"> </a>
-              </div>
-              <div style="width:88%;height:1px;background:#fff;margin:30px 0 30px 9px;"></div>
-              <div class="titlepart" style="width:45%;margin-left:0%;position: relative;height:55px">
-                <h3>集团荣誉</h3>
-                <img src="./images/tiao_03.png" >
-              </div>
-              <div>
-                <a href="images/profile/o1.jpg" data-lightbox="lightbox" ><img src="./images/profile/o1_s.png" class="imgdd1"> </a>
-                <a href="images/profile/o2.jpg" data-lightbox="lightbox" ><img src="./images/profile/o2_s.png" class="imgdd1"> </a>
-                <a href="images/profile/o3.jpg" data-lightbox="lightbox" ><img src="./images/profile/o3_s.png" class="imgdd1"> </a>
-                <a href="images/profile/o7.jpg" data-lightbox="lightbox" ><img src="./images/profile/o7_s.png" class="imgdd1"> </a>
-                <a href="images/profile/o4.jpg" data-lightbox="lightbox" ><img src="./images/profile/o4_s.png" class="imgdd1"> </a>
-                <a href="images/profile/o5.jpg" data-lightbox="lightbox" ><img src="./images/profile/o5_s.png" class="imgdd1"> </a>
-              </div>
-            </div>
-            <div class="div3">
-              <a href="profile_1.html"><img src="./images/gkimg_06.png" class="div3img"></a>
-              <a href="profile_2.html"><img src="./images/gkimg_17.png" class="div3img"></a>
-            </div>
-          </div>
         </div>
-      </div>
-      <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-        <div class="content">
-          <div class="col-md-3 leftpart">
-            <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-              <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-              <span>		视频 </span>
-            </a>
-          </div>
+        <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+            <div class="content">
+                <div class="col-md-3 leftpart">
+                    <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal"
+                       data-target="#myModal">
+                        <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                        <span>		视频 </span>
+                    </a>
+                </div>
 
-          <div class="col-md-9 rightpart" >
-            <div class="pull-right">
-              <a class="back-btn ctl_btn" href="index.html"> 返回 </a>
-              <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-              <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-              <audio id="audio-js"  class="audio-js">
-                <source src="audios/铁越集团.ogg" type="audio/ogg" />
-              </audio>
+                <div class="col-md-9 rightpart">
+                    <div class="pull-right">
+                        <a class="back-btn ctl_btn" href="index.html"> 返回 </a>
+                        <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                        <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                                class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                        <audio id="audio-js" class="audio-js">
+                            <source src="audios/铁越集团.ogg" type="audio/ogg"/>
+                        </audio>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </nav>
+        </nav>
 
         <!-- Modal -->
-        <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-          <source src="videos/集团简介.webm" type="video/webm"/>
+        <video class="video-js vjs-hidden"
+               data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+            <source src="videos/集团简介.webm" type="video/webm"/>
         </video>
 
-      </div>
-      <script src="scripts/jquery-1.9.1.min.js"></script>
-      <script src="scripts/bootstrap.min.js"></script>
-      <script src="scripts/swiper.jquery.min.js"></script>
-      <script src="scripts/swiper.animate.min.js"></script>
-      <script src="scripts/video.min.js"></script>
-      <script src="scripts/lightbox.min.js"></script>
-      <script src="scripts/typing-animate.js"></script>
-      <script src="scripts/app.js"></script>
-    </body>
-    </html>
+    </div>
+    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/swiper.jquery.min.js"></script>
+    <script src="scripts/swiper.animate.min.js"></script>
+    <script src="scripts/video.min.js"></script>
+    <script src="scripts/lightbox.min.js"></script>
+    <script src="scripts/typing-animate.js"></script>
+    <script src="scripts/app.js"></script>
+</body>
+</html>
