修正音频文件

--- a/1_1_jiandang1.html
+++ b/1_1_jiandang1.html
@@ -8,7 +8,7 @@
   <title>铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  
+
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -30,33 +30,33 @@
             <p class="half-p">集团公司党委认真贯彻党的十八大精神，用“四个全面”战略布局统一思想，全面落实从严治党要求， 紧密围绕“两学一做”学习教育和局党委、路局的工作部署，加强党的思想、组织、作风、廉政和文化建设，突出抓好党建责任制的落实、抓好班子作风能力的强化、抓好队伍整体素质的提升，为确保实现集团公司转型发展目标提供坚强有力的政治保证。</p>
             </div>
         <div class="half-height" style="    width: 1200px;margin: auto;">
-          
+
           <div class="width-1-4">
-            <a class="image-wrapper" href="tss_1.html">
-              <div class=""><img src="./images/jiandang/yinlimg_12.png"></div><p class="title">党组织构架</p>
+            <a class="image-wrapper" href="1_1_jiandang2.html">
+              <div class=""><img src="./images/jiandang/yinlimg_12.png" class="img-fullw"></div><p class="title">党组织构架</p>
             </a>
           </div>
           <div class="width-1-4">
-            <a href="tss_2.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_13.png"></div><p>思想建设</p> </a>
+            <a href="1_1_jiandang3.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_13.png" class="img-fullw"></div><p>思想建设</p> </a>
           </div>
           <div class="width-1-4">
-            <a href="tss_3.html" class="image-wrapper" ><div class=""> <img src="./images/jiandang/yinlimg_06.png"></div><p>组织建设 </p></a>
+            <a href="1_1_jiandang4.html" class="image-wrapper" ><div class=""> <img src="./images/jiandang/yinlimg_06.png" class="img-fullw"></div><p>组织建设 </p></a>
           </div>
           <div class="width-1-4">
-            <a href="tss_4.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_09.png"></div><p>作风 </p></a>
+            <a href="1_1_jiandang5.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_09.png" class="img-fullw"></div><p>作风 </p></a>
           </div>
         </div>
         <div class="half-height" style="width: 900px; margin: auto;">
 
 
           <div class="width-1-3">
-            <a href="tss_5.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_18.png"></div><p>宣传文化建设</p> </a>
+            <a href="1_1_jiandang7.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_18.png" class="img-fullw"></div><p>宣传文化建设</p> </a>
           </div>
           <div class="width-1-3">
-            <a href="tss_6.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_21.png"></div><p>廉政建设 </p></a>
+            <a href="1_1_jiandang6.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_21.png" class="img-fullw"></div><p>廉政建设 </p></a>
           </div>
           <div class="width-1-3">
-            <a href="tss_8.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_23.png"></div><p>典型示范 </p></a>
+            <a href="1_1_jiandang8.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_23.png" class="img-fullw"></div><p>典型示范 </p></a>
           </div>
         </div>
 
