--- a/1_1_zhigong2.html
+++ b/1_1_zhigong2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
+  <title>帮扶救助-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -81,11 +81,11 @@
 
         <div class="col-md-9 rightpart" >
           <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+            <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/try1.ogg" type="audio/ogg" />
+              <source src="audios/party/10帮扶救助.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
