--- a/1_1_jiandang3.html
+++ b/1_1_jiandang3.html
@@ -87,7 +87,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/try1.ogg" type="audio/ogg" />
+              <source src="audios/party/2思想建设.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
