--- a/1_1_jiandang5.html
+++ b/1_1_jiandang5.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
+  <title>作风建设-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -84,7 +84,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/try1.ogg" type="audio/ogg" />
+              <source src="audios/party/4作风建设.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
