--- a/1_1_zhigong1.html
+++ b/1_1_zhigong1.html
@@ -48,12 +48,12 @@
             </div>
             <div id="image_list" class=" bodypart">
               <ul class="jiandanglist1">
-                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_06.png"></div></a></li>
-                <li><a href="./1_1_zhigong4.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_09.png"></div></a></li>
-                <li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_03.png"></div></a></li>
+                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_06.png" class="img-fullw"></div></a></li>
+                <li><a href="./1_1_zhigong4.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_09.png" class="img-fullw"></div></a></li>
+                <li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_03.png" class="img-fullw"></div></a></li>
 
-                <li style="clear:both"><a href="./1_1_zhigong5.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_15.png"></div></a></li>
-                <li><a href="./1_1_zhigong6.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_18.png"></div></a></li>
+                <li style="clear:both"><a href="./1_1_zhigong5.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_15.png" class="img-fullw"></div></a></li>
+                <li><a href="./1_1_zhigong6.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_18.png" class="img-fullw"></div></a></li>
 
 
 
@@ -84,7 +84,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/try1.ogg" type="audio/ogg" />
+              <source src="audios/party/8职工之家.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
