--- a/1_1_zhigong3.html
+++ b/1_1_zhigong3.html
@@ -50,7 +50,7 @@
 
           <div class="col-md-9 rightpart" >
             <div class="pull-right">
-              <a class="back-btn ctl_btn" href="1_profile.html?noaudio=1"> 返回 </a>
+              <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
               <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
 
             </div>
