--- a/1_1_zhigong4.html
+++ b/1_1_zhigong4.html
@@ -83,11 +83,11 @@
 
         <div class="col-md-9 rightpart" >
           <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+            <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/try1.ogg" type="audio/ogg" />
+              <source src="audios/party/9民主监督.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
