改进职工建设页面

--- a/1_1_zhigong1.html
+++ b/1_1_zhigong1.html
@@ -48,27 +48,30 @@
             </div>
             <div id="image_list" class=" bodypart">
               <ul class="jiandanglist1">
-                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_06.png" class="img-fullw"></div></a></li>
-                <li><a href="./1_1_zhigong4.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_09.png" class="img-fullw"></div></a></li>
-                <li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_03.png" class="img-fullw"></div></a></li>
+                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_06.png" class="img-fullw" style="background-color:#187FC3"></div>
+                  <p> 工会组织架构 </p>
+                </a>
+                </li>
+                <li><a href="./1_1_zhigong4.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_09.png" class="img-fullw"></div>
+                  <p> 民主监督 </p>
+                </a></li>
 
-                <li style="clear:both"><a href="./1_1_zhigong5.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_15.png" class="img-fullw"></div></a></li>
-                <li><a href="./1_1_zhigong6.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_18.png" class="img-fullw"></div></a></li>
-
-
-
-
-
+                <li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_03.png" class="img-fullw"></div>
+                  <p> 帮扶救助 </p></a>
+                </li>
+                <li style="clear:both"><a href="./1_1_zhigong5.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_15.png" class="img-fullw"></div>
+                  <p> “小五” “三园” 建设 </p></a>
+                </li>
+                <li><a href="./1_1_zhigong6.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_18.png" class="img-fullw"></div>
+                  <p> 文体活动 </p></a>
+                </li>
               </ul>
-              </div>
-
             </div>
-
           </div>
-
         </div>
       </div>
     </div>
+  </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
       <div class="content">
         <div class="col-md-3 leftpart">
