添加职工活动图片

--- a/1_1_zhigong2.html
+++ b/1_1_zhigong2.html
@@ -47,62 +47,68 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
-              <ul class="jiandanglist1">
-                <li><img src="./images/zhigong/banglist_03.png"></li>
-                <li><img src="./images/zhigong/banglist_05.png"></li>
-                <li><img src="./images/zhigong/banglist_08.png"></li>
+              <ul class="jiandanglist1 grid" style="display:none;">
+                <li><a href="images/zhigong2/i1.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/banglist_03.png"> </a></li>
+                <li><a href="images/zhigong2/i2.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/banglist_05.png"> </a></li>
+                <li><a href="images/zhigong2/i5.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/banglist_08.png"> </a></li>
 
-                <li style="clear:both"><img src="./images/zhigong/banglist_14.png"></li>
-                <li><img src="./images/zhigong/banglist_17.png"></li>
-                <li><img src="./images/zhigong/banglist_19.png"></li>
-
-
-
-
+                <li style="clear:both"><a href="images/zhigong2/i6.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/banglist_14.png"> </a></li>
+                <li><a href="images/zhigong2/i3.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/banglist_17.png"> </a></li>
+                <li><a href="images/zhigong2/i4.jpg" data-lightbox="lightbox" > <img src="./images/zhigong/banglist_19.png"> </a></li>
 
               </ul>
+              <div class="swiper swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">	<img src="images/zhigong2/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong2/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong2/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong2/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong2/i5.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/zhigong2/i6.jpg">	</div>
+                </div>
               </div>
-
             </div>
 
           </div>
 
         </div>
+
       </div>
     </div>
-    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+  </div>
+  <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+    <div class="content">
+      <div class="col-md-3 leftpart">
+        <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
+          <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+          <span>		视频 </span>
+        </a>
+      </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/party/10帮扶救助.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+      <div class="col-md-9 rightpart" >
+        <div class="pull-right">
+          <a class="back-btn ctl_btn" href="1_1_zhigong1.html?noaudio=1" > 返回 </a>
+          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+          <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+          <audio id="audio-js"  class="audio-js">
+            <source src="audios/party/10帮扶救助.ogg" type="audio/ogg" />
+          </audio>
         </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Modal -->
+  <!-- Modal -->
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
