--- a/1_1_tss2.html
+++ b/1_1_tss2.html
@@ -8,7 +8,7 @@
     <title>社会服务-铁越服务</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-    
+
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -37,12 +37,12 @@
 					</div>
 
 				</div>
-				<div class="flex-box half-height" style="width: 600px; margin: auto;">
+				<div class="half-height" style="width: 600px; margin: auto;">
 
- 					<div class="row-1-2-left">
+ 					<div class="width-1-2" style=" ">
 					<a href="tss_12.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_15.png"></div><p>资产运营 </p></a>
 					</div>
-					<div class="row-1-2-left">
+					<div class="width-1-2" >
 					<a href="tss_13.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_18.png"></div><p>旅顺龙头生态种植养殖基地</p> </a>
 					</div>
 
@@ -68,7 +68,7 @@
 </div>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-    
+
     <script src="Scripts/video.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
