修正房产页面

--- a/try_2.html
+++ b/try_2.html
@@ -47,10 +47,23 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                <a href="images/try2/xtlimg_03.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_03.png" class="xtl"></a>
-                <a href="images/try2/xtlimg_05.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_05.png" class="xtl"></a>
-                <a href="images/try2/xtlimg_10.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_10.png" class="xtl"></a>
-                <a href="images/try2/xtlimg_12.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_12.png" class="xtl"></a>
+                <div class="row-1-2-left">
+                  <div class="col-1-2-top">
+                    <a href="images/try2/xtlimg_03.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_03.png" class=""></a>
+                  </div>
+                  <div class="col-1-2-bottom">
+                    <a href="images/try2/xtlimg_05.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_05.png" class=""></a>
+                  </div>
+
+                </div>
+                <div class="row-1-2-right">
+                  <div class="col-1-2-top">
+                    <a href="images/try2/xtlimg_10.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_10.png" class=""></a>
+                  </div>
+                  <div class="col-1-2-bottom">
+                    <a href="images/try2/xtlimg_12.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_12.png" class=""></a>
+                  </div>
+                </div>
               </div>
 
               <div class="swiper swiper-container">
