调整CSS，调整音频

--- a/tdc_1.html
+++ b/tdc_1.html
@@ -77,17 +77,17 @@
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i11.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i2.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i3.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i7.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc1/i10.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc1/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i9.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i10.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i11.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>                  
+                  <div class="swiper-slide">	<img src="images/tdc1/i1.jpg">	</div>
                 </div>
               </div>
             </div>
@@ -112,7 +112,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
+              <source src="audios/tdc/大连城市物流配送中心.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
