--- a/tss_5.html
+++ b/tss_5.html
@@ -124,8 +124,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-
-              <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
+              <source src="audios/tss/tss5.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
