--- a/tdc_3.html
+++ b/tdc_3.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                            <span class="text">位于大连市沙河口区中长街3号的沙河口城市配送中心，占地面积4万平方米，拥有常温仓储库5座、铁路专用线两条，主要经营矿泉水、粮油、服装等城市快消品的仓储配送业务。</span>
+                            <span class="text">位于大连市沙河口区中长街3号，占地面积4万平方米，拥有常温仓储库5座、铁路专用线两条，主要经营矿泉水、粮油、服装等城市快消品的仓储配送业务。</span>
                             </span>
                         </p>
                     </div>
@@ -112,7 +112,7 @@
                     <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
                             class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
                     <audio id="audio-js"  class="audio-js">
-                        <source src="audios/tdc/沙河口城市配送中心.ogg" type="audio/ogg"/>
+                        <source src="audios/tdc/沙河口城市配送中心2.ogg" type="audio/ogg"/>
                     </audio>
                 </div>
             </div>
