--- a/1_jiandang.html
+++ b/1_jiandang.html
@@ -47,7 +47,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-9">
           <div class="pull-right">
-          <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+          <a class="back-btn ctl_btn" href="index.html" > 返回 </a>
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           </div>
         </div>
