--- a/try_2.html
+++ b/try_2.html
@@ -102,7 +102,9 @@
         </div>
       </div>
     </nav>
-
+    <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+      <source src="videos/沈铁青橙.webm" type="video/webm"/>
+    </video>
 
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
